tests/negative/resource_cast_to_carrier.ora
resource TokenUnit = u256;

contract ResourceCastToCarrier {
    fn leak(place: Resource<TokenUnit>) -> u256 {
        return @cast(u256, place);
    }
}
